# TFG

mi_TFG/: CMakeLists.txt  package.xml
mi_TFG/action/: TrayAction.action
mi_TFG/config/: sim_dron.yaml  tray_dron.yaml  xacro_dron.yaml
mi_TFG/config/orbslam/: orbslam_mono.yaml  orbslam_stereo.yaml
mi_TFG/launch/: generar_dron.launch.py  multi_dron.launch.py  orbslam_use.launch.py
mi_TFG/src/control_tray/: aplicar_fuerzas_dron.cpp  control_calcular_fuerzas.cpp  gen_tray_punto.cpp  gen_tray_veltrap.cpp  gui_tray.py  gui_tray_multi.py  mierdas.cpp
mi_TFG/src/generar_URDF/: generador_URDF.cpp
mi_TFG/src/graficar/: graficar.py  graficar_GT.cpp  graficar_GTvsTray.cpp  graficar_tray.cpp
mi_TFG/src/otros/: clock.cpp
mi_TFG/src/plugins/: plugin_actuar_motores.cpp  plugin_sensor_groundtrurh.cpp
mi_TFG/urdf/: dron.xacro  dron_plugins.xacro
my_quadracopter/: CMakeLists.txt  package.xml
my_quadracopter/action/: Poly3Traj.action
my_quadracopter/config/: camara.yaml  sim.yaml
my_quadracopter/include/my_quadracopter/: quadcopter_plugin.hpp
my_quadracopter/launch/: sim_world.launch.py
my_quadracopter/src/: baro_mag_estimator.cpp  pose_estimator_fusion.cpp  rotation_matrix_publisher.cpp  sim_quadcopter.cpp  yokese.cpp
my_quadracopter/src/plugins/: barometer_plugin.cpp  ground_truth_plugin.cpp  imu_plugin.cpp  magnetometer_plugin.cpp  quadcopter_plugin.cpp  wrenches_plugin.cpp
my_quadracopter/src/tests/: test_angulos_imu.cpp  test_calcular_rd.cpp  test_fuerzas_gt.cpp  test_gen_tray.cpp  test_torques_gt.cpp  test_tray_launcher.cpp  test_wrench_tray_gt copy.cpp  test_wrench_tray_gt.cpp
my_quadracopter/urdf/: quadcopter.xacro  quadcopter3.xacro
my_quadracopter/worlds/: house_1.world  lake_house.world
my_quadracopter_multiple(bien)/: CMakeLists.txt
my_quadracopter_multiple(bien)/config/: dron.yaml  sim.yaml
my_quadracopter_multiple(bien)/launch/: sim_world.launch.py
my_quadracopter_multiple(bien)/src/: baro_mag_estimator.cpp  pose_estimator_fusion.cpp  prueba.cpp  pwm2wrench.cpp  yokese.cpp
my_quadracopter_multiple(bien)/src/plugins/: ground_truth_plugin.cpp  imu_plugin.cpp  magnetometer_plugin.cpp
my_quadracopter_multiple(bien)/src/tests/: test_angulos_imu.cpp  test_gen_tray.cpp  test_tray_launcher.cpp  test_traygui_launcher.py  test_wrench_tray_gt.cpp
my_quadracopter_multiple(bien)/worlds/: empty.world
my_quadracopter_multiple(mal)/: CMakeLists.txt  package.xml
my_quadracopter_multiple(mal)/action/: Poly3Traj.action
my_quadracopter_multiple(mal)/config/: plugins.yaml  sim_settings.yaml
my_quadracopter_multiple(mal)/launch/: sim_world.launch.py
my_quadracopter_multiple(mal)/src/: pwm2wrench.cpp  rotation_matrix_publisher.cpp  sim_quadcopter.cpp  yokese.cpp
my_quadracopter_multiple(mal)/src/plugins/: ground_truth_plugin.cpp
my_quadracopter_multiple(mal)/src/tests/: test_calcular_rd.cpp  test_fuerzas_gt.cpp  test_gen_tray.cpp  test_torques_gt.cpp  test_tray_launcher.cpp  test_traygui_launcher.py  test_wrench_tray_gt.cpp
my_quadracopter_multiple(mal)/urdf/: quadcopter2.xacro  quadcopter3.xacro
